--- a/Sprout.Exam.WebApp/Pages/_ViewImports.cshtml
+++ b/Sprout.Exam.WebApp/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Sprout.Exam.WebApp
+@using Sprout.Exam.DataAccess.Data
+@using Sprout.Exam.DataAccess.Models
 @namespace Sprout.Exam.WebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
